--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-   "name": "learn-typeorm",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
-   "devDependencies": {
-      "@types/node": "^16.11.10",
-      "prettier": "^2.6.2",
-      "ts-node": "10.4.0",
-      "typescript": "4.5.2"
-   },
-   "dependencies": {
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.2.45"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
-   }
+  "name": "learn-typeorm",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "devDependencies": {
+    "@types/node": "^16.11.10",
+    "prettier": "^2.6.2",
+    "typescript": "4.5.2"
+  },
+  "dependencies": {
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.8.0",
+    "typeorm": "0.2.45"
+  },
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+  }
 }
